Revision history for Web::ComposableRequest

          - Can set the base when generating URIs
          - Added new signature to uri_for
          - Can set extension when generating static URIs
          - Improved test coverage

0.6.1     2015-12-19 12:10:53
          - Fixed missing Exception.pm (srezic++)

0.5.1     2015-12-19 02:21:05
          - Cannot seek on a socket
          - Appended query to uri. Was there originally
          - Added protocol attribute
          - Toolchain update
          - Created Utils compose_class

0.4.1     2015-09-05 11:42:51
          - Toolchain update
          - Split request_config_roles into add_ and list_ config roles
          - Enhanced L10N locale attribute builder
          - Better prereq data for build and test phases

0.3.1     2015-08-28 17:05:34
          - Added hashref inflation for body_params and query_params
          - Fixed left over undecoded keys error in Util decode_hash
          - Added badge markup

0.2.1     2015-08-23 23:17:18
          - Works with App::Doh
          - Monkey patch Role::Tiny until RT#106276 is fixed
          - Minimum test coverage
          - Passing author tests
          - Added main POD
          - Added Cookie and JSON roles
          - Updated prereqs
          - Passing initial 10test_script.t

0.1.1     2015-08-03 01:04:57
          - Added project files to master branch
